# uv_project_setup

./: .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Notes.txt  README.md  main.py  pyproject.toml
